# WhiLa

./: .gitignore  README.md  logging_config.yaml  pyproject.toml
prompts/: formatter.prompt
tests/: test_converter.py  test_extractor.py
whila/: __init__.py  appify.py  remote.py  textify.py
