[tool.poetry]
name = "whila"
version = "0.1.0"
description = "WhiLa (Whisper-to-LaTeX) connects tools to convert spoken mathematics into LaTeX code. It includes a Speech-To-Text (STT) layer using OpenAI's whisper model and a Math-To-LaTeX (MTL) layer to render mathematics in LaTeX. The MTL layer is a Large-Language Model (LLM) for converting spoken math to legible LaTeX code. WhiLa aims to bridge the gap between writing math and the digital world, particularly for education and those unable to use conventional math writing techniques."
authors = ["Brian Welman <brianallisterwelman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
whisper = "1.1.10"
transformers = "4.40.2"
torch = "2.3.0"
gradio = "4.31.1"
vllm = "^0.4.2"

[tool.poetry.dev-dependencies]
modal = "^0.62.179"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"